# CPU-X

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.md  Makefile  README.md  TODO  cmake_uninstall.cmake.in  cpu-x_polkit  cpu-x_polkit.in  embed.sh  index.html  make_builds.sh  make_tarballs.sh  params.json  run_tests.sh  style.css  version.html
.github/: ISSUE_TEMPLATE.md  main.workflow
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  libcpuid.md
.github/blobs/: libcpuid-dev_0.4.1.r57.g8db3b8d_amd64.deb  libcpuid14_0.4.1.r57.g8db3b8d_amd64.deb
.github/workflows/: appimage_continuous.yml  appimage_release.yml  appimage_versioned.yml  libcpuid_tests.yml  linux.yml  lock_threads.yml  update_pot_file.yml
cmake/: FindFilesystem.cmake  GSettings.cmake  GettextTranslate.cmake  gettext_create_translations.cmake
containers/: Dockerfile.fedora  Dockerfile.opensuse  Dockerfile.ubuntu
data/: CMakeLists.txt  com.github.thetumultuousunicornofdarkness.cpu-x-daemon.policy.in  com.github.thetumultuousunicornofdarkness.cpu-x.appdata.xml  com.github.thetumultuousunicornofdarkness.cpu-x.desktop.in  com.github.thetumultuousunicornofdarkness.cpu-x.gschema.xml  cpu-x-gtk-3.12-dark.css  cpu-x-gtk-3.12.cmb  cpu-x-gtk-3.12.css  cpu-x-gtk-3.12.ui  cpu-x-gtk-3.16.ui  cpu-x-gtk-3.20-dark.css  cpu-x-gtk-3.20.css  cpu-x-gtk-3.8.ui  cpu-x-root.desktop  cpu-x-root.desktop.in  cpu-x-theme.css  cpu-x.1  cpu-x.appdata.xml  cpu-x.desktop  cpu-x.desktop.in  cpu-x.gresource.xml  cpu-x.gschema.xml  cpu-x.ui  cpu-x_polkit.in  cpux-gtk-3.14.ui  cpux-gtk-3.8.ui  io.github.thetumultuousunicornofdarkness.cpu-x-daemon.policy.in  io.github.thetumultuousunicornofdarkness.cpu-x.appdata.xml  io.github.thetumultuousunicornofdarkness.cpu-x.desktop.in  io.github.thetumultuousunicornofdarkness.cpu-x.gschema.xml  org.cpu-x-daemon.policy.in  org.cpu-x.appdata.xml  org.cpu-x.gschema.xml  org.pkexec.cpu-x-daemon.policy.in  org.pkexec.cpu-x.policy  org.pkexec.cpu-x.policy.in
data/completions/: CMakeLists.txt  bash  fish  zsh
data/icons/: CMakeLists.txt
data/logos/: CMakeLists.txt
locale/: ko-KR.html
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  af.po  ar.po  ber.po  bg.po  ca.po  cpu-x.pot  cpux.pot  cs_CZ.po  da.po  de.po  el.po  eo.po  es.mo  es.po  fa.po  fi.po  fr.po  ga.po  gl.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  kmr.po  ko.po  lv.po  ml.po  mr.po  ms.po  nb_NO.po  nl.po  pa.po  pl.po  pt.po  (+14 more)
scripts/: build_appimage.sh  build_cpu_x.sh  build_libcpuid.sh  build_ubuntu.sh  bump_cpu_x_version.sh  check_new_strings.sh  make_builds.sh  osc_build.sh  patch_dmidecode.sh  run_appimage.sh  run_libcpuid_tests.sh  run_tests.sh
src/: CMakeLists.txt  core.c  core.cpp  core.h  core.hpp  cpu-x.c  cpu-x.h  cpu-x_gtk.h  cpu-x_ncurses.h  cpux_gtk.h  cpux_ncurses.h  daemon.c  daemon.h  daemon_client.cpp  daemon_client.hpp  daemon_server.cpp  daemon_server.hpp  data.cpp  data.hpp  databases.h  gui.c  gui_gtk.c  gui_gtk.cpp  gui_gtk.h  gui_gtk.hpp  gui_gtk2.c  gui_gtk_id.h  gui_ncurses.c  gui_ncurses.h  includes.h  ipc.h  label_names.h  libsystem.c  logger.cpp  logger.hpp  main.c  main.cpp  ncurses.c  opencl_ext.h  options.c  (+10 more)
src/bandwidth/: BMP.c  BMP.h  BMPGraphing.c  BMPGraphing.h  CMakeLists.txt  README.md  README.txt  bandwidth.c  defs.h  font.c  font.h  libbandwidth.h  loopback.sh  main.c  minifont.c  minifont.h  routines-x86-32bit.asm  routines-x86-64bit.asm  routines32.asm  routines64.asm
src/core/: benchmarks.cpp  core.cpp  core.hpp  databases.h  internal.hpp  libcpuid.cpp  libopencl.cpp  libopengl.cpp  libpci.cpp  libsystem.cpp  libvulkan.cpp  opencl_ext.h
src/core/bandwidth/: BMP.c  CMakeLists.txt  README.md  README.txt  Testing.c  Testing.h  TestingARM.c  TestingARM.h  TestingRISCV.c  TestingRISCV.h  TestingX86.c  TestingX86.h  defs.h  libbandwidth.cpp  libbandwidth.h  main.c  routines-arm-32bit.asm  routines-arm-64bit.asm  routines-riscv-64bit.asm  routines-x86-32bit.asm  routines-x86-64bit.asm  routines.h
src/core/bandwidth/OOC/: Array.c  Array.h  CPU.c  CPU.h  Console.c  Console.h  Controller.c  Controller.h  Data.c  Data.h  DateTime.c  DateTime.h  Dictionary.c  Dictionary.h  Display.c  Display.h  Double.c  Double.h  Font.c  Font.h  FontBuiltin.c  FontBuiltin.h  FontFreetype.c  FontFreetype.h  FontPK.c  FontPK.h  GraphicsTypes.c  GraphicsTypes.h  Hardware.c  Hardware.h  Image.c  Image.h  Image_shrink.c  Image_shrink.h  Int.c  Int.h  Keycodes.h  Log.c  Log.h  Model3D.c  (+42 more)
src/core/dmidecode/: .hash  CMakeLists.txt  README.md  dmidecode.c  dmidecode.h  dmioem.c  dmiopt.h  libdmidecode.cpp  libdmidecode.h  types.h  util.c  util.h
src/daemon/: client.cpp  client.hpp  daemon.h  server.cpp  server.hpp
src/dmidecode/: .gitignore  .hash  AUTHORS  CHANGELOG  CMakeLists.txt  Makefile  Makefile_original  Makefile_static  NEWS  README  README.md  config.h  dmidecode.c  dmidecode.h  dmidecode_cpu-x.patch  dmioem.c  dmioem.h  dmiopt.c  dmiopt.h  libdmi.c  libdmi.h  libdmidecode.h  types.h  util.c  util.h  version.h
src/ui/: gtk.cpp  gtk.hpp  ncurses.cpp  ncurses.hpp
stylesheets/: stylesheet.css
tests/: CMakeLists.txt  common.sh  test_invariant_util.cpp
tests/awk/: amdgpu_pm_info  aticonfig-odgc  nvidia-settings-GPUCurrentClockFreqs  nvidia-settings-GPUUtilization  pp_dpm_mclk  pp_dpm_sclk  radeon_pm_info  test_regex.sh
tests/awk/results/: aticonfig-odgt  radeon_pm_info-sclk
tests/awk/samples/: aticonfig-odgt
tests/grep/: test_regex.sh
tests/grep/samples/: nouveau_pstate_first  nouveau_pstate_forced
vagrant/: Vagrantfile  bootstrap_common.sh  bootstrap_fedora.sh  bootstrap_ubuntu.sh
